css/styles.css
@import url('https://fonts.googleapis.com/css?family=Raleway|Droid+Sans|Open+Sans');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  clear: both;
  color: black;
  text-decoration: none;
}

body {
  /*background: azure;*/
  background: aliceblue;
  /*background: red;*/
}

#particles {
  position: absolute;
  height: 100vh;
  width: 100vw;
  z-index: 0;
}

.content-container {
  position: absolute;
  width: 50vw;
  margin-top: 100px;
  left: 50%;
  transform: translateX(-50%);
}

header {
  height: 70px;
}

.header {
  text-align: left;
  font-family: 'Raleway';
  font-size: 30px;
}

.subheader {
  display: inline-block;
  text-align: left;
  /*font-family: 'Open Sans';*/
  font-family: 'Droid Sans';
  font-size: 25px;
  width: 100%;
  /*color: red;*/
  color: #422FB1;
}

.main {
  text-align: left;
  padding-top: 100px;
  padding-bottom: 100px;
  /*background-color: grey;*/
}

.about-me {
  font-size: 35px;
  font-family: 'Open Sans';
}

.projects h1 {
  font-family: 'Open Sans';
  font-size: 20px;
  margin-bottom: 20px;
}

.project {
  width: 100%;
  height: 150px;
  border-radius: 20px;
  margin-bottom: 20px;
  border: 2px solid black;
  box-shadow: 0px 2px 20px white;
}

.project h1 {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  line-height: 150px;
  text-align: left;
  left: 5%;
  font-size: 30px;
  font-family: 'Raleway';
  color: black;
}

.project-icon {
  position: absolute;
  right: 5%;
  top: 50%;
  transform: translateY(-50%);
}

.project:hover {
  border-color: #422FB1;
}

.project:hover .project-icon {
  color: #422FB1;
}

.project:hover h1 {
  color: #422FB1;
  border-radius: 15px;
  /*background-color: rgba(0, 0, 0, 0.05);*/
}

footer {
  margin-top: 100px;
}

footer h1 {
  font-family: 'Open Sans';
  font-size: 20px;
  padding-bottom: 20px;
}

footer a {
  text-decoration: none;
  /*display: block;*/
  font-family: 'Open Sans';
  font-size: 30px;
}

footer:last-child {
  padding-bottom: 50px;
}

.tools {
  margin-top: 15px;
}

.tool {
  border: 1px solid black;
  border-radius: 5px;
  display: inline-block;
  padding: 5px;
  font-family: 'Open Sans';
  margin-bottom: 4px;
}

.image-container {
  position: relative;
  text-align: center;
  margin-bottom: 50px;
}

img {
  margin: 0 auto;
  text-align: center;
  width: 70%;
  height: auto;
  border: 2px solid white;
}

.bigger {
  width: 90%;
  height: auto;
}

.project-info {
  font-family: 'Open Sans';
  font-size: 20px;
}

@media (max-width: 900px) {
  .content-container {
    width: 90vw;
  }
  * {
    text-align: center;
  }
  .header {
    text-align: center;
  }
  .subheader {
    text-align: center;
  }
}

@media (max-device-width: 700px) {
  .content-container {
    width: 90vw;
  }
  * {
    text-align: center;
  }
  .header {
    text-align: center;
    font-size: 70px;
  }
  .subheader {
    text-align: center;
  }
  .test {
    display: block;
    margin-bottom: -40px;
    font-size: 80px;
  }
  .test2 {
    display: none;
  }
  .tools {
    display: none;
  }
  .project h1 {
    line-height: 150px;
    text-align: center;
    font-size: 35px;
  }
  .about-me {
    margin-top: 20px;
  }
  .mobile {
    margin-top: -200px;
  }
}

